# k-strong-roman-domination

./: .gitignore  main.py  pyproject.toml
GA/: ga.py
GA/tools/: check_2_strong_roman.py
ilp_kstrong/: main.py  test.py
main/src/: brkga.py  ga.py  run_brkga_batch.py  run_ga_batch.py  run_ip.py
main/src/brkga_backups/: brkga_results.csv.backup_20260107_210605  brkga_results.csv.backup_20260107_220331  brkga_results.csv.backup_20260107_235652  brkga_results.csv.backup_20260108_025943  brkga_results.csv.backup_20260108_054902  brkga_results.csv.backup_20260108_083741  brkga_results.csv.backup_20260108_100614  brkga_results.csv.backup_20260108_104143  brkga_results.csv.backup_20260108_113046  brkga_results.csv.backup_20260108_120550  brkga_results.csv.backup_20260108_123708  brkga_results.csv.backup_20260108_134228  brkga_results.csv.backup_20260108_142511  brkga_results.csv.backup_20260108_175426  brkga_results.csv.backup_20260108_183421  brkga_results.csv.backup_20260108_191436  brkga_results.csv.backup_20260108_194803  brkga_results.csv.backup_20260108_202348  brkga_results.csv.backup_20260108_205631  brkga_results.csv.backup_20260108_211015  brkga_results.csv.backup_20260108_214209  brkga_results.csv.backup_20260108_223006  brkga_results.csv.backup_20260108_232914  (+27 more)
tcc_project/: README.md  test.py
tcc_project/GA/: .checkpoint.txt  brkga.py  ga.py  graph_summary.csv  ip_two_strong.py  optuna_tunning.py  run_brkga_cli.py  run_ga_cli.py  teste.py
tcc_project/ilp_kstrong/: main.py  test.py
tools/: check_2-strong-roman.py  verify_graph.py
(+26 files in other folders)
